Removed cli, not needed right now, so dependency on jewelcli is gone
git-svn-id: https://quant.googlecode.com/svn/trunk@3 93a30d42-4d65-11de-84bb-6bba061bd1d3